[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rpg-handbook"
version = "0.1.0"
description = "Peer-to-Peer DVD Remuxing Rules by -RPG."
authors = [
    "rlaphoenix <rlaphoenix@pm.me>",
]
homepage = 'https://github.com/rlaphoenix/RPG'
repository = 'https://github.com/rlaphoenix/RPG'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = "^8.0.4"
appdirs = "^1.4.4"
subtitle-filter = "^1.4.3"
tqdm = "^4.63.0"
Sphinx = {version = "^4.4.0", optional = true}
furo = {version = "^2022.3.4", optional = true}
m2r2 = {version = "^0.3.2", optional = true}
sphinxcontrib-images = {version = "^0.9.4", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "furo", "m2r2", "sphinxcontrib-images"]

[tool.poetry.scripts]
rpg = 'rpg_handbook.__main__:main'
