[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rpg-handbook"
version = "0.1.0"
description = "Peer-to-Peer DVD Remuxing Rules by -RPG."
authors = [
    "rlaphoenix <rlaphoenix@pm.me>",
]
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/rlaphoenix/RPG'
repository = 'https://github.com/rlaphoenix/RPG'
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Framework :: Sphinx',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Video',
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.0.4"
appdirs = "^1.4.4"
subtitle-filter = "^1.4.3"
tqdm = "^4.63.0"
Sphinx = {version = "^4.4.0", optional = true}
furo = {version = "^2022.3.4", optional = true}
m2r2 = {version = "^0.3.2", optional = true}
sphinxcontrib-images = {version = "^0.9.4", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "furo", "m2r2", "sphinxcontrib-images"]

[tool.poetry.scripts]
rpg = 'rpg_handbook.__main__:main'

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
line_length = 120
